# cloudflare-request-cert

./: .gitignore  Makefile  README.md  cloudflare_cert.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/cloudflare_request_cert/: main.py
tests/: test_cloudflare_cert.py  test_config.py  test_credentials.py  test_main.py  test_request.py
